fix frotnend details page
