# backend/internal/api/router/router.go
@@ -43,6 +43,8 @@ func SetupRouter(store *store.Store, log *logrus.Logger) *gin.Engine {
 		v1.GET("/aircrafts/:registration_number/accidents", controllers.GetAccidentsByRegistrationHandler(store, log))
 		v1.GET("/aircrafts/byId/:id", controllers.GetAircraftByIdHandler(store, log))
 		v1.GET("/accidents", controllers.GetAllAccidentsHandler(store, log))
+		// Add route to get accident by ID
+		v1.GET("/accidents/byId/:id", controllers.GetAccidentByIdHandler(store, log))
 	}
 
 	// Return configured router.
